src/objects/OppPayment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <inlineHelpText>date the check was written or dated</inlineHelpText>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsInstallment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Installment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Transaction_ID__c</fullName>
        <inlineHelpText>For online payments, this is the Transaction Id of the installment payment assigned by the online payment service, such as Paypal.</inlineHelpText>
        <label>Online Transaction ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opp_For_Installment__c</fullName>
        <inlineHelpText>The Opportunity this is an installment for.  If null, then this is a mirror payment for its master opportunity.</inlineHelpText>
        <label>Opp For Installment</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Payments_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projection_Amount__c</fullName>
        <description>for use in projection reports</description>
        <formula>Amount__c  *  Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment_Profile__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Opportunity__r.Recurring_Payment_Profile__c , Opportunity__r.Recurring_Payment_Profile__r.Name, &quot;_self&quot;)</formula>
        <label>Recurring Payment Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Off</label>
        <type>Checkbox</type>
    </fields>
    <label>Opp Installment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Paid__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>test</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Installment Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Paid_AND_WrittenOff</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  Paid__c ,  Written_Off__c )</errorConditionFormula>
        <errorMessage>An installment cannot be both Paid and Written Off</errorMessage>
    </validationRules>
</CustomObject>